@@ -113,6 +113,7 @@ typedef struct start_files_t {
   const char *zxatasp_master, *zxatasp_slave;
   const char *zxcf;
   const char *divide_master, *divide_slave;
+  const char *mdr[8];
 
 } start_files_t;
 
@@ -474,6 +475,15 @@ setup_start_files( start_files_t *start_files )
   start_files->divide_master = settings_current.divide_master_file;
   start_files->divide_slave  = settings_current.divide_slave_file;
 
+  start_files->mdr[0] = settings_current.mdr_file;
+  start_files->mdr[1] = settings_current.mdr_file2;
+  start_files->mdr[2] = settings_current.mdr_file3;
+  start_files->mdr[3] = settings_current.mdr_file4;
+  start_files->mdr[4] = settings_current.mdr_file5;
+  start_files->mdr[5] = settings_current.mdr_file6;
+  start_files->mdr[6] = settings_current.mdr_file7;
+  start_files->mdr[7] = settings_current.mdr_file8;
+
   return 0;
 }
 
@@ -482,7 +492,7 @@ static int
 parse_nonoption_args( int argc, char **argv, int first_arg,
 		      start_files_t *start_files )
 {
-  size_t i;
+  size_t i, j;
   const char *filename;
   utils_file file;
   libspectrum_id_t type;
@@ -536,6 +546,15 @@ parse_nonoption_args( int argc, char **argv, int first_arg,
     case LIBSPECTRUM_CLASS_SNAPSHOT:
       start_files->snapshot = filename; break;
 
+    case LIBSPECTRUM_CLASS_MICRODRIVE:
+      for( j = 0; j < 8; j++ ) {
+        if( !start_files->mdr[j] ) {
+	  start_files->mdr[j] = filename;
+	  break;
+	}
+      }
+      break;
+
     case LIBSPECTRUM_CLASS_TAPE:
       start_files->tape = filename; break;
 
@@ -558,7 +577,7 @@ parse_nonoption_args( int argc, char **argv, int first_arg,
 static int
 do_start_files( start_files_t *start_files )
 {
-  int autoload, error;
+  int autoload, error, i;
 
   /* Can't do both input recording and playback */
   if( start_files->playback && start_files->recording ) {
@@ -635,6 +654,15 @@ do_start_files( start_files_t *start_files )
   if( start_files->tape ) {
     error = utils_open_file( start_files->tape, autoload, NULL );
     if( error ) return error;
+  }
+
+  /* Microdrive cartridges */
+
+  for( i = 0; i < 8; i++ ) {
+    if( start_files->mdr[i] ) {
+      error = utils_open_file( start_files->mdr[i], autoload, NULL );
+      if( error ) return error;
+    }
   }
 
   /* IDE hard disk images */
